parser/y.output

state 0
	$accept: .trans_unit $end 
	opt_label: .    (37)

	kIF  shift 7
	kRETURN  shift 9
	kBREAK  shift 10
	kCONTINUE  shift 11
	kTRUE  shift 29
	kFALSE  shift 30
	kTRY  shift 12
	kTHROW  shift 13
	kBOOLEAN  shift 14
	kINT  shift 15
	kDOUBLE  shift 16
	kSTRING  shift 17
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 19
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  reduce 37 (src line 216)

	stmt  goto 4
	expr  goto 6
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	opt_label  goto 8
	type_spec  goto 5
	trans_unit  goto 1
	def_or_stmt  goto 2
	def_func  goto 3

state 1
	$accept:  trans_unit.$end 
	trans_unit:  trans_unit.def_or_stmt 
	opt_label: .    (37)

	$end  accept
	kIF  shift 7
	kRETURN  shift 9
	kBREAK  shift 10
	kCONTINUE  shift 11
	kTRUE  shift 29
	kFALSE  shift 30
	kTRY  shift 12
	kTHROW  shift 13
	kBOOLEAN  shift 14
	kINT  shift 15
	kDOUBLE  shift 16
	kSTRING  shift 17
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 19
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  reduce 37 (src line 216)

	stmt  goto 4
	expr  goto 6
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	opt_label  goto 8
	type_spec  goto 5
	def_or_stmt  goto 37
	def_func  goto 3

state 2
	trans_unit:  def_or_stmt.    (1)

	.  reduce 1 (src line 83)


state 3
	def_or_stmt:  def_func.    (3)

	.  reduce 3 (src line 86)


state 4
	def_or_stmt:  stmt.    (4)

	.  reduce 4 (src line 87)


state 5
	def_func:  type_spec.tIDENT '（' params '）' block 
	def_func:  type_spec.tIDENT '（' '）' block 
	def_func:  type_spec.tIDENT '（' params '）' '。' 
	def_func:  type_spec.tIDENT '（' '）' '。' 
	stmt:  type_spec.tIDENT '。' 
	stmt:  type_spec.tIDENT tIS expr '。' 

	tIDENT  shift 38
	.  error


state 6
	stmt:  expr.'。' 
	expr:  expr.'，' assign 

	'。'  shift 39
	'，'  shift 40
	.  error


state 7
	stmt:  kIF.'（' expr '）' block if_tail 

	'（'  shift 41
	.  error


state 8
	stmt:  opt_label.kWHILE '（' expr '）' block 
	stmt:  opt_label.kFOR '（' opt_expr '；' opt_expr '；' opt_expr '）' block 
	stmt:  opt_label.kFOREACH '（' tIDENT '：' expr '）' block 

	kWHILE  shift 42
	kFOR  shift 43
	kFOREACH  shift 44
	.  error


state 9
	stmt:  kRETURN.opt_expr '。' 
	opt_expr: .    (39)

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  reduce 39 (src line 225)

	opt_expr  goto 45
	expr  goto 46
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 10
	stmt:  kBREAK.opt_ident '。' 
	opt_ident: .    (41)

	tIDENT  shift 49
	.  reduce 41 (src line 231)

	opt_ident  goto 48

state 11
	stmt:  kCONTINUE.opt_ident '。' 
	opt_ident: .    (41)

	tIDENT  shift 49
	.  reduce 41 (src line 231)

	opt_ident  goto 50

state 12
	stmt:  kTRY.block kCATCH '（' tIDENT '）' block 
	stmt:  kTRY.block kFINALLY block 
	stmt:  kTRY.block kCATCH '（' tIDENT '）' block kFINALLY block 

	'【'  shift 53
	.  error

	block_beg  goto 52
	block  goto 51

state 13
	stmt:  kTHROW.expr '。' 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	expr  goto 54
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 14
	type_spec:  kBOOLEAN.    (5)

	.  reduce 5 (src line 92)


state 15
	type_spec:  kINT.    (6)

	.  reduce 6 (src line 93)


state 16
	type_spec:  kDOUBLE.    (7)

	.  reduce 7 (src line 94)


state 17
	type_spec:  kSTRING.    (8)

	.  reduce 8 (src line 95)


state 18
	expr:  assign.    (43)

	.  reduce 43 (src line 240)


state 19
	opt_label:  tIDENT.'：' 
	primary:  tIDENT.    (80)

	'：'  shift 55
	.  reduce 80 (src line 368)


state 20
	assign:  log_or.    (45)
	log_or:  log_or.tLOG_OR log_and 

	tLOG_OR  shift 56
	.  reduce 45 (src line 246)


state 21
	assign:  postfix.tIS assign 
	assign:  postfix.tADD_A assign 
	assign:  postfix.tSUB_A assign 
	assign:  postfix.tMUL_A assign 
	assign:  postfix.tDIV_A assign 
	assign:  postfix.tMOD_A assign 
	unary:  postfix.    (71)
	postfix:  postfix.'（' '）' 
	postfix:  postfix.'（' args '）' 
	postfix:  postfix.tINC 
	postfix:  postfix.tDEC 

	tIS  shift 57
	tADD_A  shift 58
	tSUB_A  shift 59
	tMUL_A  shift 60
	tDIV_A  shift 61
	tMOD_A  shift 62
	tINC  shift 64
	tDEC  shift 65
	'（'  shift 63
	.  reduce 71 (src line 336)


state 22
	log_or:  log_and.    (52)
	log_and:  log_and.tLOG_AND equality 

	tLOG_AND  shift 66
	.  reduce 52 (src line 272)


state 23
	postfix:  primary.    (74)

	.  reduce 74 (src line 346)


state 24
	log_and:  equality.    (54)
	equality:  equality.tEQ relational 
	equality:  equality.tNE relational 

	tEQ  shift 67
	tNE  shift 68
	.  reduce 54 (src line 278)


state 25
	primary:  '（'.expr '）' 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	expr  goto 69
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 26
	primary:  tINT_LITERAL.    (81)

	.  reduce 81 (src line 372)


state 27
	primary:  tDOUBLE_LITERAL.    (82)

	.  reduce 82 (src line 376)


state 28
	primary:  tSTRING_LITERAL.    (83)

	.  reduce 83 (src line 380)


state 29
	primary:  kTRUE.    (84)

	.  reduce 84 (src line 384)


state 30
	primary:  kFALSE.    (85)

	.  reduce 85 (src line 388)


state 31
	equality:  relational.    (56)
	relational:  relational.tL additive 
	relational:  relational.tG additive 
	relational:  relational.tGE additive 
	relational:  relational.tLE additive 

	tGE  shift 72
	tLE  shift 73
	tG  shift 71
	tL  shift 70
	.  reduce 56 (src line 284)


state 32
	relational:  additive.    (59)
	additive:  additive.'+' multive 
	additive:  additive.'-' multive 

	'+'  shift 74
	'-'  shift 75
	.  reduce 59 (src line 294)


state 33
	additive:  multive.    (64)
	multive:  multive.'*' unary 
	multive:  multive.'/' unary 
	multive:  multive.'%' unary 

	'*'  shift 76
	'/'  shift 77
	'%'  shift 78
	.  reduce 64 (src line 312)


state 34
	multive:  unary.    (67)

	.  reduce 67 (src line 322)


state 35
	unary:  '-'.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	unary  goto 79
	postfix  goto 80
	primary  goto 23

state 36
	unary:  '！'.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	unary  goto 81
	postfix  goto 80
	primary  goto 23

state 37
	trans_unit:  trans_unit def_or_stmt.    (2)

	.  reduce 2 (src line 84)


state 38
	def_func:  type_spec tIDENT.'（' params '）' block 
	def_func:  type_spec tIDENT.'（' '）' block 
	def_func:  type_spec tIDENT.'（' params '）' '。' 
	def_func:  type_spec tIDENT.'（' '）' '。' 
	stmt:  type_spec tIDENT.'。' 
	stmt:  type_spec tIDENT.tIS expr '。' 

	tIS  shift 84
	'。'  shift 83
	'（'  shift 82
	.  error


state 39
	stmt:  expr '。'.    (20)

	.  reduce 20 (src line 146)


state 40
	expr:  expr '，'.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	assign  goto 85
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 41
	stmt:  kIF '（'.expr '）' block if_tail 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	expr  goto 86
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 42
	stmt:  opt_label kWHILE.'（' expr '）' block 

	'（'  shift 87
	.  error


state 43
	stmt:  opt_label kFOR.'（' opt_expr '；' opt_expr '；' opt_expr '）' block 

	'（'  shift 88
	.  error


state 44
	stmt:  opt_label kFOREACH.'（' tIDENT '：' expr '）' block 

	'（'  shift 89
	.  error


state 45
	stmt:  kRETURN opt_expr.'。' 

	'。'  shift 90
	.  error


state 46
	opt_expr:  expr.    (40)
	expr:  expr.'，' assign 

	'，'  shift 40
	.  reduce 40 (src line 229)


state 47
	primary:  tIDENT.    (80)

	.  reduce 80 (src line 368)


state 48
	stmt:  kBREAK opt_ident.'。' 

	'。'  shift 91
	.  error


state 49
	opt_ident:  tIDENT.    (42)

	.  reduce 42 (src line 235)


state 50
	stmt:  kCONTINUE opt_ident.'。' 

	'。'  shift 92
	.  error


state 51
	stmt:  kTRY block.kCATCH '（' tIDENT '）' block 
	stmt:  kTRY block.kFINALLY block 
	stmt:  kTRY block.kCATCH '（' tIDENT '）' block kFINALLY block 

	kCATCH  shift 93
	kFINALLY  shift 94
	.  error


state 52
	block:  block_beg.'】' 
	block:  block_beg.stmts '】' 
	opt_label: .    (37)

	kIF  shift 7
	kRETURN  shift 9
	kBREAK  shift 10
	kCONTINUE  shift 11
	kTRUE  shift 29
	kFALSE  shift 30
	kTRY  shift 12
	kTHROW  shift 13
	kBOOLEAN  shift 14
	kINT  shift 15
	kDOUBLE  shift 16
	kSTRING  shift 17
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 19
	'】'  shift 95
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  reduce 37 (src line 216)

	stmt  goto 97
	expr  goto 6
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	stmts  goto 96
	opt_label  goto 8
	type_spec  goto 98

state 53
	block_beg:  '【'.    (15)

	.  reduce 15 (src line 123)


state 54
	stmt:  kTHROW expr.'。' 
	expr:  expr.'，' assign 

	'。'  shift 99
	'，'  shift 40
	.  error


state 55
	opt_label:  tIDENT '：'.    (38)

	.  reduce 38 (src line 220)


state 56
	log_or:  log_or tLOG_OR.log_and 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	log_and  goto 100
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 57
	assign:  postfix tIS.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	assign  goto 101
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 58
	assign:  postfix tADD_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	assign  goto 102
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 59
	assign:  postfix tSUB_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	assign  goto 103
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 60
	assign:  postfix tMUL_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	assign  goto 104
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 61
	assign:  postfix tDIV_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	assign  goto 105
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 62
	assign:  postfix tMOD_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	assign  goto 106
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 63
	postfix:  postfix '（'.'）' 
	postfix:  postfix '（'.args '）' 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	'）'  shift 107
	.  error

	assign  goto 109
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	args  goto 108

state 64
	postfix:  postfix tINC.    (77)

	.  reduce 77 (src line 355)


state 65
	postfix:  postfix tDEC.    (78)

	.  reduce 78 (src line 359)


state 66
	log_and:  log_and tLOG_AND.equality 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	equality  goto 110
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 67
	equality:  equality tEQ.relational 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	relational  goto 111
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 68
	equality:  equality tNE.relational 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	relational  goto 112
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 69
	expr:  expr.'，' assign 
	primary:  '（' expr.'）' 

	'，'  shift 40
	'）'  shift 113
	.  error


state 70
	relational:  relational tL.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	additive  goto 114
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 71
	relational:  relational tG.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	additive  goto 115
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 72
	relational:  relational tGE.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	additive  goto 116
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 73
	relational:  relational tLE.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	additive  goto 117
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 74
	additive:  additive '+'.multive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	multive  goto 118
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 75
	additive:  additive '-'.multive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	multive  goto 119
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 76
	multive:  multive '*'.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	unary  goto 120
	postfix  goto 80
	primary  goto 23

state 77
	multive:  multive '/'.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	unary  goto 121
	postfix  goto 80
	primary  goto 23

state 78
	multive:  multive '%'.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	'-'  shift 35
	'！'  shift 36
	'（'  shift 25
	.  error

	unary  goto 122
	postfix  goto 80
	primary  goto 23

state 79
	unary:  '-' unary.    (72)

	.  reduce 72 (src line 337)

